--- a/Sequelize-Passport-Example/package.json
+++ b/Sequelize-Passport-Example/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^1.6.5",
+    "node": "^14.4.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
