updated routes files and cleaned up server.js

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "mood_swings_db",
+    "database": "mood_swing_db",
     "port": 3306,
     "host": "localhost",
     "dialect": "mysql"
