--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
-    "express-sessions": "^1.0.6",
     "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "node": "^14.4.0",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.8.6"
+    "sequelize": "^5.8.6",
+    "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
