--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6",
+    "unsplash": "^4.2.0",
     "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
