--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "npm run lint",
-    "start": "node server.js",
+    "start": "npm run seed && node server.js",
+    "seed": "node db/seeds.js",
     "lint": "eslint --quiet .",
     "fix": "eslint --fix .",
     "watch": "nodemon server.js"
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^1.6.5",
     "node": "^14.4.0",
