--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^5.8.6",
     "unsplash": "^4.2.0",
     "unsplash-js": "^6.0.0"
